# Portfolio-API

./: Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
app/: database.py  main.py  models.py  schemas.py
app/routers/: education.py  experience.py  profile.py  skills.py  visits.py
