[project]
name = "portfolio-api"
version = "0.1.0"
description = "An interactive API for my portfolio site!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.41",
]
